--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/HanHollander/Pynkie"
 
+[tool.setuptools.package-data]
+"pynkie" = ["py.typed"]
+
 [tool.setuptools.packages.find]
 # All the following settings are optional:
-where = ["src"]
+where = ["src", "stubs"]
